--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "lihongze/sdk",
     "type": "library",
     "require": {
-        "php": "5.6",
+        "php": ">=5.6",
         "yiisoft/yii2": "~2.0.11"
     },
     "license": "BSD",
@@ -12,6 +12,7 @@
             "email": "lihongze@yiiu.com"
         }
     ],
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "boy7607891xy\\sdk\\": "src/"
