--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php": ">=5.6",
         "yiisoft/yii2": "~2.0.11"
     },
-    "license": "BSD",
+    "license": "MIT",
     "authors": [
         {
             "name": "lihongze",
